--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -19,12 +19,23 @@ body {
   }
   
   .navbar a {
-    font-weight: 200;
+    font-weight: 240;
+    font-size: 16pt;
     color: white;
     padding: 14px 16px;
     text-decoration: none;
   }
-  
+  .navbar a:hover{
+    color: black;
+  }
+        .navbar a:active{
+          color: whitesmoke;
+        }
+        /* .navbar a:visited{
+          color: red;
+          background: wheat;
+        }
+   */
   .anchor {
     display: block;
     position: relative;
