--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -16,6 +16,9 @@ body {
     width: 100%; /* Full width */
     display: flex;
     justify-content: center;
+    border-bottom: 1px solid #fff;
+    box-shadow: 0px 25px 15px -18px rgb(202, 201, 201);
+    /* margin: -50px auto 10px;  */
   }
   
   .navbar a {
@@ -43,18 +46,21 @@ body {
     visibility: hidden;
   }
   
-  /*JUMBOTRON*/
+  /*!Jumbo*/
   .jumbotron {
-    height: 100vh; /*height to 100% of view height*/
-    background: #31b0d5; /*background color to blue*/
-    margin-bottom: 0; /*no bottom margin*/
-  
+    height: 100vh;
+    /* background: yellowgreen;  */
+    background-image: url("https://pixabay.com/get/55e2d1454b50a814ea9d8d79c328337f1022dfe05455764876267dd7/background-3246124.jpg");
+    /* backdrop-filter: blur(8px); */
+    background-size: cover;
+    margin-bottom: 0; 
     display: flex;
     flex-direction: column;
   }
   
+  /*? jumbo text */
   .jumbotron-text {
-    /*TAGLINE UNDER NAME*/
+    /* z-index: 2; */
     font-weight: 400;
     font-size: 2em;
     color: white;
@@ -72,6 +78,16 @@ body {
   
   .jumbotron-text p {
     margin: 0;
+  }
+
+  hr {
+    border:none;
+    height: 20px;
+     width: 80%;
+    height: 50px;
+    border-bottom: 1px solid rgb(253, 253, 253);
+    box-shadow: 0px 25px 15px -18px rgb(202, 201, 201);
+    margin: -50px auto 10px; 
   }
   
   /*SOCIAL LINKS*/
@@ -228,6 +244,8 @@ body {
   }
   
   .li-skills {
+    border: 0.7px solid rgb(90, 89, 89);
+    border-radius: 8px;
     display: inline-block;
     margin: 7px;
     padding: 5px 10px;
@@ -283,4 +301,14 @@ body {
   
   .white-text {
     color: white;
+  }
+
+  .actionss{
+    margin-top: 20px;
+  }
+
+  .actionss a{
+    color: wheat;
+    text-decoration: none;
+    font-size: 16pt;
   }
